<resources>
    <string name="app_name">Surprise Me</string>
    <string name="mainUserName">Nikita</string>
    <string name="mainUserEmail">nikitaartamonov@mail.ru</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="help">Help</string>
    <string name="our_partners">Our partners</string>
    <string name="legal">Legal</string>
    <string name="log_out">Log out</string>
    <string name="made_with_love_by_surprise_me">Made with 🖤 by Surprise Me</string>
    <string name="app_version">v 2.0.0</string>
    <string name="surprise_me">Surprise Me</string>
    <string name="settingsSettings">Settings</string>
    <string name="settings_tour_language">Tour language</string>
    <string name="settings_english">English</string>
    <string name="settings_russian">Russian</string>
    <string name="settings_userName">Nikita</string>
    <string name="settings_userNameHint">Enter your name here</string>
    <string name="settings_change">Change</string>
    <string name="settings_email">Email</string>
    <string name="settings_userEmail">nikitaartamonov@mail.ru</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_allow_us_something">Allow us something</string>
</resources>
