<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="#000"
    android:gravity="center_horizontal">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000">
        <View
            android:layout_width="40dp"
            android:layout_height="3dp"
            android:background="@drawable/oval_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"/>
        <View
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corners_white_bg"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/defaultWhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsSettings"
                android:layout_marginTop="5dp"
                android:textSize="28sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_tour_language"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="50dp"
                android:layout_gravity="left"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_marginTop="20dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/oval_button"
                    android:text="@string/settings_english"
                    android:textAllCaps="false"
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/tourLangEngButton"
                    android:onClick="tourLangFunc"/>
                <Button
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/oval_button_white"
                    android:text="@string/settings_russian"
                    android:textAllCaps="false"
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/tourLangRusButton"
                    android:onClick="tourLangFunc"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textSize="17sp"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:textColor="@color/grey"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/settingsUserName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_userName"
                    android:layout_gravity="left"
                    android:textSize="15sp"
                    android:background="@android:color/transparent"
                    android:hint="@string/settings_userNameHint"
                    android:maxLines="1"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_change"
                    android:layout_gravity="end"
                    android:textSize="15sp"
                    android:textColor="@color/settingsSelectorTrue"
                    android:onClick="changeName"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_email"
                android:layout_gravity="left"
                android:layout_marginTop="25dp"
                android:textColor="@color/grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_userEmail"
                android:layout_gravity="left"
                android:textSize="15sp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_permissions"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textSize="17sp"
                android:layout_marginTop="35dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_allow_us_something"
                    android:layout_gravity="left"
                    android:textSize="15sp"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:thumb="@drawable/settings_switch_selector"
                    android:track="@drawable/settings_switch_track"
                    android:id="@+id/settingsSwitch"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="We collect data anonymously only for\nenhancing our UX/UI needs"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:textColor="@color/grey"/>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>