<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbarThumbVertical="@color/grey">

        <LinearLayout
            android:paddingTop="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/avatar"
                app:civ_border_width="0dp"
                app:civ_border_color="#fff" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/mainUserName"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/mainUserEmail"
                android:textSize="15sp"
                android:id="@+id/userEmail"/>
            <View
                android:id="@+id/separateLine0"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:drawableEnd="@drawable/present_image"
                android:paddingBottom="15dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/aboutUsButton"
                android:onClick="aboutUsFunc"/>
            <View
                android:id="@+id/separateLine1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:drawableEnd="@drawable/settings"
                android:paddingBottom="15dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/settingsButton"
                android:onClick="settingsFunc"/>
            <View
                android:id="@+id/separateLine2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:drawableEnd="@drawable/star"
                android:paddingBottom="15dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/rateUsButton"
                android:onClick="rateUsFunc"/>
            <View
                android:id="@+id/separateLine3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:drawableEnd="@drawable/help"
                android:paddingBottom="15dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/helpButton"
                android:onClick="helpFunc"/>
            <View
                android:id="@+id/separateLine4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/space"/>
            <View
                android:id="@+id/separateLine5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_partners"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:drawableEnd="@drawable/right_arrow"
                android:paddingBottom="15dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/ourPartnersButton"
                android:onClick="ourPartnersFunc"/>
            <View
                android:id="@+id/separateLine6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:drawableEnd="@drawable/right_arrow"
                android:paddingBottom="15dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/legalButton"
                android:onClick="legalFunc"/>
            <View
                android:id="@+id/separateLine7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/oval_button"
                android:layout_marginTop="60dp"
                android:text="@string/log_out"
                android:textColor="@color/red"
                android:id="@+id/logOutButton"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="logOutFunc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/made_with_love_by_surprise_me"
                android:textSize="12sp"
                android:textColor="@color/grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="60dp"
                android:textSize="12sp"
                android:text="@string/app_version"
                android:textColor="@color/grey"
                android:id="@+id/appVersion"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="#ffffff"
        android:src="@drawable/chat_image"
        android:id="@+id/fab"
        android:onClick="openChatClientFunc"/>
</androidx.constraintlayout.widget.ConstraintLayout>